# ProjetoSO

./: .gitignore  CMakeLists.txt  Relatório.odt  SLinkedListManipulation.c  SLinkedListManipulation.h  config  files.c  files.h  gestorAvarias.c  gestorAvarias.h  gestorCorrida.c  gestorCorrida.h  gestorEquipas.c  gestorEquipas.h  log.txt  main.c  main.h  makefile  teste.sh
src/: files.c  files.h  gestorAvarias.c  gestorAvarias.h  gestorCorrida.c  gestorCorrida.h  gestorEquipas.c  gestorEquipas.h  main.c  main.h
